Fixed hover effect that was stuck on mobile devices

--- a/src/app/table/table-data/row/row.component.scss
+++ b/src/app/table/table-data/row/row.component.scss
@@ -30,9 +30,11 @@
     display: none;
   }
 
-  &:hover {
-    cursor: pointer;
-    background-color: $clr-row-hover-bg
+  @media (hover: hover) {
+    &:hover {
+      cursor: pointer;
+      background-color: $clr-row-hover-bg
+    }
   }
 }
 
